--- a/susumu/susumu.vcxproj.filters
+++ b/susumu/susumu.vcxproj.filters
@@ -1404,6 +1404,8 @@
     <ClInclude Include="vendor\stb_image\stb_image.h">
       <Filter>vendor\stb_image</Filter>
     </ClInclude>
+    <ClInclude Include="src\engine\debug\instrumentor.h" />
+    <ClInclude Include="src\engine\core\mousecodes.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\engine\core\app.cpp">
@@ -1484,5 +1486,8 @@
     <ClCompile Include="vendor\stb_image\stb_image.cpp">
       <Filter>vendor\stb_image</Filter>
     </ClCompile>
+    <ClCompile Include="src\engine\renderer\graphics_context.cpp" />
+    <ClCompile Include="src\engine\core\input.cpp" />
+    <ClCompile Include="src\engine\core\window.cpp" />
   </ItemGroup>
 </Project>
