removed redundant inline

--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -59,9 +59,19 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Settings]
-ViewportPos=1350,305
+ViewportPos=1340,333
 ViewportId=0x1C33C293
 Size=344,338
+Collapsed=0
+
+[Window][Renderer2D Stats]
+Pos=712,14
+Size=223,162
+Collapsed=0
+
+[Window][Properties]
+Pos=2,324
+Size=248,210
 Collapsed=0
 
 [Docking][Data]
