--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -31,7 +31,7 @@ Collapsed=0
 DockId=0x00000003,1
 
 [Window][DockSpace Demo]
-Size=1920,1027
+Size=960,540
 Collapsed=0
 
 [Window][Example: Console]
@@ -65,17 +65,21 @@ Size=344,338
 Collapsed=0
 
 [Window][Renderer2D Stats]
-Pos=712,14
-Size=223,162
+Pos=732,11
+Size=214,183
 Collapsed=0
 
 [Window][Properties]
-Pos=2,324
-Size=248,210
+Pos=578,375
+Size=356,147
+Collapsed=0
+
+[Window][DockSpace]
+Size=960,540
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Pos=0,42 Size=1920,1008 Split=X
+DockSpace       ID=0x3BC79352 Pos=112,154 Size=960,521 Split=X
   DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=1425,1008 Split=X
     DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=1046,792 Split=Y
       DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=1109,638 CentralNode=1
