--- a/susumu-editor/imgui.ini
+++ b/susumu-editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace]
 Pos=0,0
-Size=1920,1027
+Size=1280,720
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,14 +9,14 @@ Size=400,400
 Collapsed=0
 
 [Window][Renderer2D Stats]
-Pos=1607,19
-Size=313,506
+Pos=967,19
+Size=313,352
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Properties]
-Pos=1607,527
-Size=313,500
+Pos=967,373
+Size=313,347
 Collapsed=0
 DockId=0x00000004,0
 
@@ -26,9 +26,15 @@ Size=1605,1008
 Collapsed=0
 DockId=0x00000001,0
 
+[Window][Scene]
+Pos=0,19
+Size=965,701
+Collapsed=0
+DockId=0x00000001,0
+
 [Docking][Data]
-DockSpace     ID=0x09EF459F Window=0x9A404470 Pos=0,42 Size=1920,1008 Split=X Selected=0xC89E3217
-  DockNode    ID=0x00000001 Parent=0x09EF459F SizeRef=965,521 CentralNode=1 Selected=0x995B0CF8
+DockSpace     ID=0x09EF459F Window=0x9A404470 Pos=164,206 Size=1280,701 Split=X Selected=0xC89E3217
+  DockNode    ID=0x00000001 Parent=0x09EF459F SizeRef=965,521 CentralNode=1 Selected=0x18B8C0DE
   DockNode    ID=0x00000002 Parent=0x09EF459F SizeRef=313,521 Split=Y Selected=0x84775CF9
     DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=253,261 Selected=0x84775CF9
     DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=253,258 Selected=0xC89E3217
