--- a/susumu-editor/imgui.ini
+++ b/susumu-editor/imgui.ini
@@ -9,33 +9,27 @@ Size=400,400
 Collapsed=0
 
 [Window][Renderer2D Stats]
-Pos=967,19
-Size=313,352
+Pos=941,19
+Size=339,403
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Properties]
-Pos=967,373
-Size=313,347
+Pos=941,424
+Size=339,296
 Collapsed=0
 DockId=0x00000004,0
 
-[Window][Viewport]
-Pos=0,19
-Size=1605,1008
-Collapsed=0
-DockId=0x00000001,0
-
 [Window][Scene]
 Pos=0,19
-Size=965,701
+Size=939,701
 Collapsed=0
 DockId=0x00000001,0
 
 [Docking][Data]
-DockSpace     ID=0x09EF459F Window=0x9A404470 Pos=164,206 Size=1280,701 Split=X Selected=0xC89E3217
-  DockNode    ID=0x00000001 Parent=0x09EF459F SizeRef=965,521 CentralNode=1 Selected=0x18B8C0DE
-  DockNode    ID=0x00000002 Parent=0x09EF459F SizeRef=313,521 Split=Y Selected=0x84775CF9
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=253,261 Selected=0x84775CF9
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=253,258 Selected=0xC89E3217
+DockSpace     ID=0x09EF459F Window=0x9A404470 Pos=34,76 Size=1280,701 Split=X
+  DockNode    ID=0x00000001 Parent=0x09EF459F SizeRef=939,701 CentralNode=1 Selected=0x18B8C0DE
+  DockNode    ID=0x00000002 Parent=0x09EF459F SizeRef=339,701 Split=Y Selected=0x84775CF9
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=419,403 Selected=0x84775CF9
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=419,296 Selected=0xC89E3217
 
