--- a/susumu/susumu.vcxproj
+++ b/susumu/susumu.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="src\engine\renderer\texture.h" />
     <ClInclude Include="src\engine\renderer\vertex_array.h" />
     <ClInclude Include="src\engine\scene\components.h" />
+    <ClInclude Include="src\engine\scene\entity.h" />
     <ClInclude Include="src\engine\scene\scene.h" />
     <ClInclude Include="src\platform\opengl\opengl_buffer.h" />
     <ClInclude Include="src\platform\opengl\opengl_context.h" />
@@ -620,6 +621,7 @@
     <ClCompile Include="src\engine\renderer\shader.cpp" />
     <ClCompile Include="src\engine\renderer\texture.cpp" />
     <ClCompile Include="src\engine\renderer\vertex_array.cpp" />
+    <ClCompile Include="src\engine\scene\entity.cpp" />
     <ClCompile Include="src\engine\scene\scene.cpp" />
     <ClCompile Include="src\platform\opengl\opengl_buffer.cpp" />
     <ClCompile Include="src\platform\opengl\opengl_context.cpp" />
