--- a/susumu/susumu.vcxproj.filters
+++ b/susumu/susumu.vcxproj.filters
@@ -1418,6 +1418,7 @@
     </ClInclude>
     <ClInclude Include="src\engine\scene\scene.h" />
     <ClInclude Include="src\engine\scene\components.h" />
+    <ClInclude Include="src\engine\scene\entity.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\engine\core\app.cpp">
@@ -1511,5 +1512,6 @@
       <Filter>vendor\stb_image</Filter>
     </ClCompile>
     <ClCompile Include="src\engine\scene\scene.cpp" />
+    <ClCompile Include="src\engine\scene\entity.cpp" />
   </ItemGroup>
 </Project>
