--- a/susumu/susumu.vcxproj
+++ b/susumu/susumu.vcxproj
@@ -176,6 +176,7 @@
     <ClInclude Include="src\engine\scene\components.h" />
     <ClInclude Include="src\engine\scene\entity.h" />
     <ClInclude Include="src\engine\scene\scene.h" />
+    <ClInclude Include="src\engine\scene\scene_camera.h" />
     <ClInclude Include="src\platform\opengl\opengl_buffer.h" />
     <ClInclude Include="src\platform\opengl\opengl_context.h" />
     <ClInclude Include="src\platform\opengl\opengl_framebuffer.h" />
@@ -623,6 +624,7 @@
     <ClCompile Include="src\engine\renderer\vertex_array.cpp" />
     <ClCompile Include="src\engine\scene\entity.cpp" />
     <ClCompile Include="src\engine\scene\scene.cpp" />
+    <ClCompile Include="src\engine\scene\scene_camera.cpp" />
     <ClCompile Include="src\platform\opengl\opengl_buffer.cpp" />
     <ClCompile Include="src\platform\opengl\opengl_context.cpp" />
     <ClCompile Include="src\platform\opengl\opengl_framebuffer.cpp" />
