--- a/susumu/susumu.vcxproj
+++ b/susumu/susumu.vcxproj
@@ -177,6 +177,7 @@
     <ClInclude Include="src\engine\scene\entity.h" />
     <ClInclude Include="src\engine\scene\scene.h" />
     <ClInclude Include="src\engine\scene\scene_camera.h" />
+    <ClInclude Include="src\engine\scene\scriptable_entity.h" />
     <ClInclude Include="src\platform\opengl\opengl_buffer.h" />
     <ClInclude Include="src\platform\opengl\opengl_context.h" />
     <ClInclude Include="src\platform\opengl\opengl_framebuffer.h" />
