--- a/susumu-editor/imgui.ini
+++ b/susumu-editor/imgui.ini
@@ -9,35 +9,51 @@ Size=400,400
 Collapsed=0
 
 [Window][Renderer2D Stats]
-Pos=901,19
-Size=379,701
+Pos=738,372
+Size=264,348
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Properties]
-Pos=0,520
-Size=899,200
+Pos=962,19
+Size=318,701
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Scene]
 Pos=0,19
-Size=899,499
+Size=736,492
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Console]
 Pos=0,513
-Size=879,207
+Size=736,207
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x0000000B,0
+
+[Window][Hierarchy]
+Pos=738,19
+Size=264,351
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][Inspector]
+Pos=1004,19
+Size=276,701
+Collapsed=0
+DockId=0x0000000A,0
 
 [Docking][Data]
-DockSpace       ID=0x09EF459F Window=0x9A404470 Pos=34,76 Size=1280,701 Split=X
-  DockNode      ID=0x00000001 Parent=0x09EF459F SizeRef=899,701 Split=Y Selected=0x18B8C0DE
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=879,499 Split=Y Selected=0x18B8C0DE
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=879,492 CentralNode=1 Selected=0x18B8C0DE
-      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=879,207 Selected=0xF9BEF62A
-    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=879,200 Selected=0xC89E3217
-  DockNode      ID=0x00000002 Parent=0x09EF459F SizeRef=379,701 Selected=0x84775CF9
+DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=190,232 Size=1280,701 Split=X
+  DockNode        ID=0x00000009 Parent=0x09EF459F SizeRef=1002,701 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000009 SizeRef=960,701 Split=X
+      DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=736,499 Split=Y Selected=0x18B8C0DE
+        DockNode  ID=0x00000005 Parent=0x00000007 SizeRef=813,492 CentralNode=1 Selected=0x18B8C0DE
+        DockNode  ID=0x0000000B Parent=0x00000007 SizeRef=813,207 Selected=0xF9BEF62A
+      DockNode    ID=0x00000008 Parent=0x00000003 SizeRef=264,499 Split=Y Selected=0x788BAA0D
+        DockNode  ID=0x00000001 Parent=0x00000008 SizeRef=353,351 Selected=0x788BAA0D
+        DockNode  ID=0x00000002 Parent=0x00000008 SizeRef=353,348 Selected=0x84775CF9
+    DockNode      ID=0x00000004 Parent=0x00000009 SizeRef=318,701 Selected=0xC89E3217
+  DockNode        ID=0x0000000A Parent=0x09EF459F SizeRef=276,701 Selected=0xF02CD328
 
