--- a/susumu-editor/imgui.ini
+++ b/susumu-editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace]
 Pos=0,0
-Size=1920,1027
+Size=1600,900
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,8 +9,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Renderer2D Stats]
-Pos=1100,564
-Size=352,462
+Pos=917,495
+Size=293,404
 Collapsed=0
 DockId=0x00000002,0
 
@@ -22,38 +22,46 @@ DockId=0x00000004,0
 
 [Window][Scene]
 Pos=0,21
-Size=1098,720
+Size=915,593
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Console]
-Pos=0,743
-Size=1098,283
+Pos=0,616
+Size=915,283
 Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Hierarchy]
-Pos=1100,21
-Size=352,541
+Pos=917,21
+Size=293,472
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000006,0
 
 [Window][Inspector]
-Pos=1454,21
-Size=466,1005
+Pos=1212,21
+Size=388,878
 Collapsed=0
 DockId=0x0000000A,0
 
+[Window][Stats]
+Pos=917,495
+Size=293,404
+Collapsed=0
+DockId=0x0000000C,0
+
 [Docking][Data]
-DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,44 Size=1920,1005 Split=X
-  DockNode        ID=0x00000009 Parent=0x09EF459F SizeRef=1210,701 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000009 SizeRef=960,701 Split=X
-      DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=915,499 Split=Y Selected=0x18B8C0DE
-        DockNode  ID=0x00000005 Parent=0x00000007 SizeRef=813,593 CentralNode=1 Selected=0x18B8C0DE
-        DockNode  ID=0x0000000B Parent=0x00000007 SizeRef=813,283 Selected=0xF9BEF62A
-      DockNode    ID=0x00000008 Parent=0x00000003 SizeRef=293,499 Split=Y Selected=0x788BAA0D
-        DockNode  ID=0x00000001 Parent=0x00000008 SizeRef=353,377 Selected=0x788BAA0D
-        DockNode  ID=0x00000002 Parent=0x00000008 SizeRef=353,322 Selected=0x84775CF9
-    DockNode      ID=0x00000004 Parent=0x00000009 SizeRef=318,701 Selected=0xC89E3217
-  DockNode        ID=0x0000000A Parent=0x09EF459F SizeRef=388,701 Selected=0xF02CD328
+DockSpace           ID=0x09EF459F Window=0x9A404470 Pos=190,193 Size=1600,878 Split=X
+  DockNode          ID=0x00000009 Parent=0x09EF459F SizeRef=1210,701 Split=X
+    DockNode        ID=0x00000003 Parent=0x00000009 SizeRef=960,701 Split=X
+      DockNode      ID=0x00000007 Parent=0x00000003 SizeRef=915,499 Split=Y Selected=0x18B8C0DE
+        DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=813,593 CentralNode=1 Selected=0x18B8C0DE
+        DockNode    ID=0x0000000B Parent=0x00000007 SizeRef=813,283 Selected=0xF9BEF62A
+      DockNode      ID=0x00000008 Parent=0x00000003 SizeRef=293,499 Split=Y Selected=0x788BAA0D
+        DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=353,377 Split=Y Selected=0x788BAA0D
+          DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=293,472 Selected=0x788BAA0D
+          DockNode  ID=0x0000000C Parent=0x00000001 SizeRef=293,404 Selected=0x968648AE
+        DockNode    ID=0x00000002 Parent=0x00000008 SizeRef=353,322 Selected=0x84775CF9
+    DockNode        ID=0x00000004 Parent=0x00000009 SizeRef=318,701 Selected=0xC89E3217
+  DockNode          ID=0x0000000A Parent=0x09EF459F SizeRef=388,701 Selected=0xF02CD328
 
