--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,6 @@
 [submodule "susumu/vendor/yaml-cpp"]
 	path = susumu/vendor/yaml-cpp
 	url = https://github.com/thecherno/yaml-cpp
+[submodule "susumu/vendor/ImGuizmo"]
+	path = susumu/vendor/ImGuizmo
+	url = https://github.com/thecherno/imguizmo
